# AngelScript

./: CMakeLists.txt  gem.json
Assets/Scripts/: BasicMover.as  EntityBusProbe.as  RayProbe.as  RuntimeProbe.as  TransformBusProbe.as
Code/: CMakeLists.txt  angelscript_api_files.cmake  angelscript_builder_files.cmake  angelscript_editor_private_files.cmake  angelscript_editor_shared_files.cmake  angelscript_editor_tests_files.cmake  angelscript_private_files.cmake  angelscript_shared_files.cmake  angelscript_tests_files.cmake
Code/Include/AngelScript/: AngelScriptBus.h  AngelScriptTypeIds.h  ScriptAsset.h
Code/Platform/Android/: PAL_android.cmake  angelscript_shared_files.cmake
Code/Platform/Linux/: angelscript_private_files.cmake
Code/Platform/Mac/: angelscript_private_files.cmake
Code/Platform/Windows/: PAL_windows.cmake  angelscript_shared_files.cmake
Code/Platform/iOS/: angelscript_private_files.cmake
Code/Source/: AngelScriptModuleInterface.cpp  AngelScriptModuleInterface.h  ScriptAsset.cpp
Code/Source/Bindings/: BehaviorContextBus.cpp  BehaviorContextBus.h  Debug.cpp  Debug.h  Entity.cpp  Entity.h  EntityBus.cpp  EntityBus.h  Gameplay.cpp  Gameplay.h  Math.cpp  Math.h  Physics.cpp  Physics.h
Code/Source/Clients/: AngelScriptModule.cpp  AngelScriptSystemComponent.cpp  AngelScriptSystemComponent.h
Code/Source/Components/: AngelScriptComponent.cpp  AngelScriptComponent.h
Code/Source/Runtime/: AngelScriptRuntime.cpp  AngelScriptRuntime.h  AngelScriptStdString.cpp  BehaviorContextInspector.cpp  BehaviorContextInspector.h  EntityBusBinding.cpp  EntityBusBinding.h
Code/Source/Tools/: AngelScriptAssetBuilderComponent.cpp  AngelScriptAssetBuilderComponent.h  AngelScriptAssetBuilderWorker.cpp  AngelScriptAssetBuilderWorker.h  AngelScriptBuildersModule.cpp  AngelScriptEditorModule.cpp  AngelScriptEditorSystemComponent.cpp  AngelScriptEditorSystemComponent.h
Code/Source/Tools/Components/: EditorAngelScriptComponent.cpp  EditorAngelScriptComponent.h
Code/Source/Tools/PropertyHandlers/: ScriptEntityIdPropertyHandler.cpp  ScriptEntityIdPropertyHandler.h
Code/Tests/Clients/: AngelScriptTest.cpp
Registry/: assetprocessor_settings.setreg
